--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
   padding-top: 30px;
+	padding-bottom: 150px;
   font-family: 'Rajdhani', sans-serif;
   background-color: white;
 }
@@ -19,7 +20,13 @@ nav ul li a{
 footer{
 	font-size: 50px;	
 	font-color: #000000;
+	position: relative;
 }
+
+#reg:hover{
+	display: block;
+}
+
 .social-buttons-list ul {
 	overflow: auto;
 }
@@ -37,3 +44,4 @@ footer{
 	padding-top: 17.75%;
 	padding-left: 0.95%;
 }
+
